<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FAFAFA"
    tools:context=".usermanual.SetupInstructions">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"

        android:elevation="2dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:id="@+id/back_Button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Setup Instructions"
                android:textColor="@color/bl"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/back_Button"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

       >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Assembly:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/assembly"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Wiring and Connections:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wiring_and_connections"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Power Supply:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_supply"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4. Initial Power On:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_power_on"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="50dp"
                    tools:ignore="HardcodedText" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>