<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context=".usermanual.OperatingInstructions">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/white"

        android:elevation="2dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:layout_centerVertical="true"
                android:id="@+id/back_Button"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Operating Instructions"
                android:textColor="@color/bl"
                android:textStyle="bold"
                android:textSize="40sp"
                android:layout_centerVertical="true"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/back_Button"
                tools:ignore="HardcodedText" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:cardCornerRadius="10dp"
            android:layout_marginBottom="50dp"

            app:cardElevation="2dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1. Turning on the system:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/turning_on_the_system"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2. Controlling the Rotor Assembly:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/controlling_the_rotor_assembly"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="HardcodedText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3. Calibration and Testing:"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calibration_and_testing"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="normal"
                    android:textAlignment="textStart"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    tools:ignore="HardcodedText" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>